hphp/hack/test/typecheck/fun_generics_bad.php.exp
File "fun_generics_bad.php", line 9, characters 10-26:
Invalid return type (Typing[4336])
File "fun_generics_bad.php", line 9, characters 10-26:
Expected void because this function does not always return a value
File "fun_generics_bad.php", line 12, characters 4-17:
But got darray<int, T2>
